# LLMUI

./: .gitignore  README.md  main.py  ollama_try.py  pyproject.toml  try.py
benchmarking/: dataset_benchmarking.py
data_load/: load_brave_search.py  load_csv.py  load_discord.py  load_excel.py  load_facebook.py  load_json.py  load_pdf.py  load_reddit.py  load_slack.py  load_telegram.py  load_trello.py  load_tweet.py
evals/: evals.py
fine_tuning/: SFT.py
providers/: azure.py  deepseek.py  huggingface.py  mistral.py  nvidia.py  ollama.py  openai.py
rag_type/: agentic_rag.py  simple_rag.py
tools/: web_crawl_tool.py  web_search.py
utils/: fetch_hf_models.py  fetch_ollama_models.py
vector_databases/: chroma.py  faiss.py  milvus.py
visualization/doc_hist/: doc_histogram.py
visualization/kg_vis/: knowledge_graph.py
visualization/model_structure/: display_model_structure.py
visualization/pacmap/: pacmap.py
