[project]
name = "llmui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "dspy>=2.6.27",
    "graphiti-core[groq]>=0.12.4",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pypdf2>=3.0.1",
    "pyvis>=0.3.2",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]
