[project]
name = "llmui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.46.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.13",
    "dspy>=2.6.27",
    "firecrawl-py>=2.14.0",
    "graphiti-core[groq]>=0.12.4",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.6",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.3.0",
    "langchain-neo4j>=0.4.0",
    "langchain-ollama>=0.3.3",
    "langchain-xai>=0.2.4",
    "langgraph>=0.4.8",
    "levenshtein>=0.27.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pacmap>=0.8.0",
    "plotly>=6.2.0",
    "pypdf>=5.7.0",
    "pypdf2>=3.0.1",
    "pyvis>=0.3.2",
    "requests>=2.32.4",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "unstructured>=0.18.3",
]
